; ModuleID = '/home/carl/AnghaBench/os-tutorial/18-interrupts/drivers/extr_screen.c_set_cursor_offset.c'
source_filename = "/home/carl/AnghaBench/os-tutorial/18-interrupts/drivers/extr_screen.c_set_cursor_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_SCREEN_CTRL = common dso_local global i32 0, align 4
@REG_SCREEN_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_cursor_offset(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = sdiv i32 %3, 2
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* @REG_SCREEN_CTRL, align 4
  %6 = call i32 @port_byte_out(i32 %5, i8 zeroext 14)
  %7 = load i32, i32* @REG_SCREEN_DATA, align 4
  %8 = load i32, i32* %2, align 4
  %9 = ashr i32 %8, 8
  %10 = trunc i32 %9 to i8
  %11 = call i32 @port_byte_out(i32 %7, i8 zeroext %10)
  %12 = load i32, i32* @REG_SCREEN_CTRL, align 4
  %13 = call i32 @port_byte_out(i32 %12, i8 zeroext 15)
  %14 = load i32, i32* @REG_SCREEN_DATA, align 4
  %15 = load i32, i32* %2, align 4
  %16 = and i32 %15, 255
  %17 = trunc i32 %16 to i8
  %18 = call i32 @port_byte_out(i32 %14, i8 zeroext %17)
  ret void
}

declare dso_local i32 @port_byte_out(i32, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
